--- a/docs/wallet/paymaster/0-rpc-methods.mdx
+++ b/docs/wallet/paymaster/0-rpc-methods.mdx
@@ -120,7 +120,7 @@ Sends a UserOperation to a paymaster for off-chain verification. If approved, it
 If the paymaster rejects the UserOperation, it should not return a result but a standard JSON-RPC error with the reason.
 
 :::info
-Any overrides provided in the paymaster result MUST be used in the userop otherwise the paymaster signature won't work.
+Any gas overrides provided in the paymaster result MUST be used in the userop otherwise the paymaster signature won't work.
 :::
 
 
