--- a/docs/wallet/guides/1-send-gasless-tx.mdx
+++ b/docs/wallet/guides/1-send-gasless-tx.mdx
@@ -308,7 +308,7 @@ Two Nfts were minted. The transaction hash is : 0xf43576a07f39660737a342c99a187e
 ```
 </details>
 
-You can lookup the hash on explorers that supports user operations like [Blockscount](https://www.blockscout.com/).
+You can lookup the hash on explorers that supports user operations like [Blockscout](https://www.blockscout.com/).
 
 In the next guides, we will show how to allow users to pay gas in erc-20s using a paymaster.
 
