--- a/docs/wallet/guides/3-multisig.mdx
+++ b/docs/wallet/guides/3-multisig.mdx
@@ -264,7 +264,7 @@ Two Nfts were minted. The transaction hash is : 0xf43576a07f39660737a342c99a187e
 
 </details>
 
-You can lookup the hash on explorers that supports user operations like [Blockscount](https://www.blockscout.com/).
+You can lookup the hash on explorers that supports user operations like [Blockscout](https://www.blockscout.com/).
 
 ### Full Example
 Below is the complete example code that you can copy directly to implement the functionality described in the tutorial.
