fix intro sentence in 7702 delegation

--- a/docs/experimental/7702/2-delegation.mdx
+++ b/docs/experimental/7702/2-delegation.mdx
@@ -5,7 +5,7 @@ keywords: [EIP-7702, Externally Owned Accounts, EOAs, smart contract wallets, Et
 ---
 # EIP-7702 Delegation
 
-This guide provides a step-by-step approach to implementing EIP-7702 delegaton. 
+This guide provides an educational framework to implementing EIP-7702 delegaton. It is not currently intended for production use.
 
 EIP-7702 enhances Externally Owned Accounts (EOAs) by allowing them to perform smart contract-like operations. In this example, we will create a delegation authorization and send a raw transaction on the Mekong chain.
 
