add react native safe passkeys demo reference

--- a/docs/wallet/plugins/0-passkeys.mdx
+++ b/docs/wallet/plugins/0-passkeys.mdx
@@ -20,13 +20,16 @@ The contracts and their audits are available on the [Safe-Modules repo](https://
 The deployment addresses can be found in our [contract deployment](/wallet/technical-reference/deployments/#safe-passkeys) page.
 
 ## Demo
-These example showcases a Safe Smart Account deployment utilizing 4337 and Passkeys, and minting an NFT.
+These example showcases a Safe Smart Account deployment utilizing 4337 and Passkeys
 
-- **Safe Passkeys WebApp**:
+- **React Demo**:
     - [Live Demo](https://passkeys.candide.dev/) 
     - [Source Code](https://github.com/candidelabs/abstractionkit/tree/main/examples/SafeAccountExamples/PasskeysCreateAccountandSendTransaction)
 
-- **Node script simulated Passkeys**
+- **React Native Demo**
+   - [Source Code](https://github.com/candidelabs/passkeys-react-native-demo)
+
+- **Node.js demo with simulated Passkeys**
     - [Source Code](https://github.com/candidelabs/abstractionkit/tree/main/examples/SafeAccountExamples/WebAuthnCreateAccountAndSendTransaction)
 
 ## Quick start
