adjust titles for eip-7702 pages

--- a/docs/experimental/7702/2-delegation.mdx
+++ b/docs/experimental/7702/2-delegation.mdx
@@ -1,5 +1,5 @@
 ---
-title: Delegation
+title: EIP-7702 Delegation
 description: Add a new tx type that permanently sets the code for an EOA
 keywords: [EIP-7702, Externally Owned Accounts, EOAs, smart contract wallets, Ethereum, ERC-4337, batching, sponsorship, privilege de-escalation]
 ---
