fix links for mempool bundler

--- a/docs/wallet/bundler/3-rpc-endpoints.mdx
+++ b/docs/wallet/bundler/3-rpc-endpoints.mdx
@@ -70,21 +70,21 @@ export const unifiedMempool = [
     logo: "/img/networks/42161.png",
     chainId: 42161,
     chainHandle: "arbitrum",
-    address: "https://arbitrum.test.bundler.candide.dev",
+    address: "https://arbitrum.test.bundler.candide.dev/rpc",
   },
   {
     network: "Ethereum",
     logo: "/img/networks/1.png",
     chainId: 1,
     chainHandle: "ethereum",
-    address: "https://ethereum.test.bundler.candide.dev",
+    address: "https://ethereum.test.bundler.candide.dev/rpc",
   },
   {
     network: "Optimism",
     logo: "/img/networks/10.png",
     chainId: 10,
     chainHandle: "optimism",
-    address: "https://optimism.test.bundler.candide.dev",
+    address: "https://optimism.test.bundler.candide.dev/rpc",
   },
 ];
 
