--- a/docs/instagas/1-overview.mdx
+++ b/docs/instagas/1-overview.mdx
@@ -1,7 +1,8 @@
 ---
-title: InstaGas Overview | Node Code Gas Sponsorship
+title: InstaGas Overview | No-Code Gas Sponsorship
 description: A No-Code Gas Sponsorship Paymaster for dapps to define gas policies to directly sponsor gas for Smart Wallets end-users
 keywords: [gas sponsorship, paymaster, eip-7702, erc-4337, gas station, gas policies, gas abstraction]
+image: /img/posters/paymaster-meta.png
 ---
 
 # InstaGas
