--- a/docs/instagas/2-gas-policies.mdx
+++ b/docs/instagas/2-gas-policies.mdx
@@ -2,6 +2,7 @@
 title: InstaGas Gas Policies
 description: A No-Code Gas Sponsorship Paymaster for dapps to define gas policies to directly sponsor gas for Smart Wallets end-users
 keywords: [InstaGas, gas policy, gas sponsorship, smart contracts, eip-7702]
+image: /img/posters/paymaster-meta.png
 ---
 
 # InstaGas Policies Rules Overview
