--- a/docs/instagas/4-usecases.mdx
+++ b/docs/instagas/4-usecases.mdx
@@ -2,6 +2,7 @@
 title: InstaGas Usecases | Gas Sponsorship for any dApp
 description: Real world applications and usecases of InstaGas Policies for Gas Sponsorship
 keywords: [gas sponsorship, paymaster, eip-7702, erc-4337, gas station, gas policies, gas abstraction]
+image: /img/posters/paymaster-meta.png
 ---
 
 # Real-World Applications of InstaGas Policies
