--- a/docs/instagas/5-architecture.mdx
+++ b/docs/instagas/5-architecture.mdx
@@ -2,6 +2,7 @@
 title: InstaGas Architecture | Gas Sponsorship for any dApp 
 description: InstaGas is a paymaster that enables gas sponsorship through customizable Gas Policies, supporting ERC-20 token payments as a fallback. It's future-ready, compatible with EIP-7702 and RIP-7560.
 keywords: [gas sponsorship, paymaster, eip-7702, erc-4337, gas station, gas policies, gas abstraction]
+image: /img/posters/paymaster-meta.png
 ---
 
 # InstaGas Architecture
