add candide paymaster and safe 4337 module contract addresses

--- a/docs/wallet/technical-reference/1.deployments.mdx
+++ b/docs/wallet/technical-reference/1.deployments.mdx
@@ -20,6 +20,24 @@ EP releases on [eth-infinitism github](https://github.com/eth-infinitism/account
 | v0.6                  | 0x5FF137D4b0FDCD49DcA30c7CF57E578a026d2789 |
 | v0.7                  | 0x0000000071727De22E5E9d8BAf0edAc6f37da032 |
 
+## Candide Paymasters
+| Contract              | Address                                    |
+| ----------------------| -------------------------------------------|
+| CandidePaymaster V3 for EP v0.7 | 0x8b1f6cb5d062aa2Ce8d581942bbb960420d875BA |
+| CandidePaymaster V3 for EP v0.6 | 0x36F4Aa64673568782461bF03C75462f8ef0A1b76 |
+
+## Safe 4337 Module
+
+| Contract              | Address                                    |
+| ----------------------| -------------------------------------------|
+| Safe4337Module v0.3.0 | 0x75cf11467937ce3F2f357CE24ffc3DBF8fD5c226 |
+| SafeModuleSetup v0.3.0 | 0x2dd68b007B46fBe91B9A7c3EDa5A7a1063cB5b47 |
+| Safe4337Module v0.2.0 | 0xa581c4A4DB7175302464fF3C06380BC3270b4037 |
+| AddModulesLib v0.2.0 | 0x8EcD4ec46D4D2a6B64fE960B3D64e8B94B2234eb |
+
+
+Refer to [safe-4337-module](https://github.com/safe-global/safe-modules-deployments/tree/main/src/assets/safe-4337-module)
+
 ## Social Recovery Module
 
 The address is expected to be different with different recovery grace periods. 
@@ -39,16 +57,6 @@ Contracts, formal verificaton and audits are found on [candide-contracts](https:
 | Ethereum Sepolia             |                                            |                                            |                                            | 0x949d01d424bE050D09C16025dd007CB59b3A8c66 |
 | Optimism                     | 0x38275826E1933303E508433dD5f289315Da2541c | 0x088f6cfD8BB1dDb1BB069CCb3fc1A98927D233f2 | 0x9BacD92F4687Db306D7ded5d4513a51EA05df25b |                                            |
 | Polygon                      | 0x38275826E1933303E508433dD5f289315Da2541c | 0x088f6cfD8BB1dDb1BB069CCb3fc1A98927D233f2 | 0x9BacD92F4687Db306D7ded5d4513a51EA05df25b |                                            |
-
-
-## Candide Paymasters
-| Contract              | Address                                    |
-| ----------------------| -------------------------------------------|
-| CandidePaymaster V2   | 0x3fe285dcd76bcce4ac92d38a6f2f8e964041e020 |
-
-## Safe 4337 Module
-
-Refer to [safe-4337-module](https://github.com/safe-global/safe-modules-deployments/tree/main/src/assets/safe-4337-module)
 
 ## Safe Passkeys
 
