add instagas in homepage, menu bar, and notice bar

--- a/docs/instagas/1-overview.mdx
+++ b/docs/instagas/1-overview.mdx
@@ -7,14 +7,18 @@ image: /img/posters/paymaster-meta.png
 
 # InstaGas
 
-InstaGas is a **no-code** platform that enables **dApps** to sponsor gas fees for their end-users by 
+:::info InstaGas now in Beta
+[Signup](https://app.formbricks.com/s/cm7pxlxbn0000l503icy2yfeb) for early access when official invites go live and help shape the future of Ethereum's UX
+:::
+
+InstaGas is a **no-code** platform that enables Dapps to sponsor gas fees for their end-users by 
 creating customized gas policies tailored to their specific smart contracts and use cases.
 
 ![candide-instagas-logo](/img/logo/instagas-logo.png)
 
 ## Who is this for?
 
-InstaGas is designed for dApps that want to simplify the user experience by abstracting away gas costs, **without the need for a complex wallet integration**. 
+InstaGas is designed for Dapps that want to simplify the user experience by abstracting away gas costs, **without the need for a complex wallet integration**. 
 InstaGas is ideal for a variety of dApps, including:
 
 * DeFi exchanges
