Add post for eip-7702 release, entrypoint v0.8

--- a/docs/wallet/bundler/3-rpc-endpoints.mdx
+++ b/docs/wallet/bundler/3-rpc-endpoints.mdx
@@ -139,7 +139,7 @@ export const testChainList = [
   },
 ];
 
-Candide's Bundler endpoint includes methods for ERC-4337. Learn more about the various [ERC-4337 Methods](./2-rpc-methods.mdx).
+Candide's Bundler endpoint includes methods for ERC-4337 and EIP-7702. Learn more about the various [Bundler Methods](./2-rpc-methods.mdx).
 
 ## Supported Networks
 
