--- a/docs/wallet/guides/0-getting-started-eip-7702.mdx
+++ b/docs/wallet/guides/0-getting-started-eip-7702.mdx
@@ -18,7 +18,7 @@ While EIP-7702 brings significant improvements to Ethereum EOA wallets, it's ess
 - **Private key access remains**: The original key will always maintain admin access to the upgraded account, limiting the security benefits an EOA wallet can offer.    
 - **Portability limitations**: Upgraded EOAs to Smart Accounts are tied to a specific wallet, and transferring to a new wallet will be a security-critical operation, unless all wallets adopt the same smart contracts (which is unlikely).
 
-To learn more about EIP-7702, visit the dedicated [7702 Overview](/docs/account-abstraction/7702/1-overview.mdx).
+To learn more about EIP-7702, visit the dedicated [7702 Overview](/account-abstraction/7702/overview).
 
 In this example, you will learn how to upgrade an EOA to a Smart Account to leverage features such as batching and gas sponsorship
 
