--- a/docs/wallet/technical-reference/1.deployments.mdx
+++ b/docs/wallet/technical-reference/1.deployments.mdx
@@ -13,12 +13,13 @@ import { NetworkList } from "/src/components/NetworkList";
 
 ## Account Abstraction EntryPoint
 
-EP releases on [eth-infinitism github](https://github.com/eth-infinitism/account-abstraction/releases).
-
 | Version               | Address                                    |
 | ----------------------| -------------------------------------------|
 | v0.6                  | 0x5FF137D4b0FDCD49DcA30c7CF57E578a026d2789 |
 | v0.7                  | 0x0000000071727De22E5E9d8BAf0edAc6f37da032 |
+| v0.8                  | 0x4337084D9E255Ff0702461CF8895CE9E3b5Ff108 |
+
+For EP smart contracts code and audits, refer to [eth-infinitism github](https://github.com/eth-infinitism/account-abstraction/releases).
 
 ## Candide Paymasters
 | Contract              | Address                                    |
@@ -36,7 +37,7 @@ EP releases on [eth-infinitism github](https://github.com/eth-infinitism/account
 | AddModulesLib v0.2.0 | 0x8EcD4ec46D4D2a6B64fE960B3D64e8B94B2234eb |
 
 
-Refer to [safe-4337-module](https://github.com/safe-global/safe-modules-deployments/tree/main/src/assets/safe-4337-module)
+For Safe 4337 code and audits, refer to [safe-4337-module](https://github.com/safe-global/safe-modules-deployments/tree/main/src/assets/safe-4337-module)
 
 ## Social Recovery Module
 
@@ -45,9 +46,8 @@ Below are some that are deployed at
 - 3 Days
 - 7 Days
 - 14 Days
-- 3 mins (only on Ethereum Sepolia Testnet)
+- 3 mins (only recommended for Testnets)
 
-Contracts, formal verificaton and audits are found on [candide-contracts](https://github.com/candidelabs/candide-contracts).
 
 | Network                      | 3 Days Recovery Grace Period               | 7 Days Recovery Grace Period               | 14 Days Recovery Grace Period              | 3 minutes Recovery Grace Period            |
 | ---------------------------- | ------------------------------------------ | ------------------------------------------ | ------------------------------------------ |------------------------------------------  |
@@ -57,6 +57,8 @@ Contracts, formal verificaton and audits are found on [candide-contracts](https:
 | Ethereum Sepolia             |                                            |                                            |                                            | 0x949d01d424bE050D09C16025dd007CB59b3A8c66 |
 | Optimism                     | 0x38275826E1933303E508433dD5f289315Da2541c | 0x088f6cfD8BB1dDb1BB069CCb3fc1A98927D233f2 | 0x9BacD92F4687Db306D7ded5d4513a51EA05df25b |                                            |
 | Polygon                      | 0x38275826E1933303E508433dD5f289315Da2541c | 0x088f6cfD8BB1dDb1BB069CCb3fc1A98927D233f2 | 0x9BacD92F4687Db306D7ded5d4513a51EA05df25b |                                            |
+
+For smart contracts code, formal verificaton and audits, refer to [candide-contracts](https://github.com/candidelabs/candide-contracts).
 
 ## Safe Passkeys
 
@@ -75,4 +77,4 @@ The Safe Passkeys Module is deployed in the following networks:
 | Polygon                      | 0xF7488fFbe67327ac9f37D5F722d83Fc900852Fbf | 0xc2b78104907F722DABAc4C69f826a522B2754De4 | 0x445a0683e494ea0c5AF3E83c5159fBE47Cf9e765 |
 | Polygon Amoy                 | 0xF7488fFbe67327ac9f37D5F722d83Fc900852Fbf | 0xc2b78104907F722DABAc4C69f826a522B2754De4 | 0x445a0683e494ea0c5AF3E83c5159fBE47Cf9e765 |
 
-To add additional deployments please follow the [deployment instructions](https://github.com/safe-global/safe-modules/tree/main/modules/passkey#deploy) in the Safe Modules repository.
+For Safe Passkeys code and audits, refer to [safe-4337-module](https://github.com/safe-global/safe-modules/tree/main/modules/passkey#deploy)
