--- a/docs/account-abstraction/7702/2-delegation.mdx
+++ b/docs/account-abstraction/7702/2-delegation.mdx
@@ -5,7 +5,8 @@ keywords: [EIP-7702, Externally Owned Accounts, EOAs, smart contract wallets, Et
 ---
 # EIP-7702 Delegation
 
-This guide provides an educational framework to implementing EIP-7702 delegaton. It is not currently intended for production use.
+This guide provides an educational framework to implementing EIP-7702 delegaton. It is not intended to be used in apps. 
+For concrete examples on how to upgrade an EOA to a smart account, vist [EIP-7702 Geting Started](/wallet/guides/getting-started-eip-7702).
 
 EIP-7702 enhances Externally Owned Accounts (EOAs) by allowing them to perform smart contract-like operations. In this example, we will create a delegation authorization and send a raw transaction on the Mekong chain.
 
